# embassy

embassy-executor-macros/src/macros/: main.rs
embassy-executor/src/: spawner.rs
examples/stm32f4/: Cargo.toml  build.rs
examples/stm32f4/.cargo/: config.toml
examples/stm32h7/: Cargo.toml
